crates/tome/tests/snapshots/browse_snapshots__snapshot_detail_pane_after_disable_toggle.snap
---
source: crates/tome/tests/browse_snapshots.rs
expression: out
---
< foo                                           │Preview: foo
                                                │source: bar
────────────────────                            │path: ~/.tome/library/foo
Source:   bar                                   │
Type:     local                                 │foo
Path:     ~/.tome/library/foo                   │A test skill body.
Synced:   2026-05-08T00:00:00Z                  │
                                                │
Actions─────────────────────────────────────────│
> Open source directory                         │
  Copy path to clipboard                        │
  Disable on this machine                       │
  Back                                          │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
 ⚠ legacy skill exclusion controls are unsupported because they cannot choose a route destination; use `tome route exclu
