crates/tome/tests/snapshots/browse_snapshots__snapshot_theme_light_filtered.snap
---
source: crates/tome/tests/browse_snapshots.rs
expression: out
---
SKILL                          SOURCE                   PATH
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
fixture-skill  claude-plu ~/.tome/library/fixture-skil│Preview: fixture-skill
                                                      │source: claude-plugins
                                                      │path: ~/.tome/library/fixture-skill
                                                      │
                                                      │fixture-skill
                                                      │A test skill body.
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
 1/5 skills   j/k ↕  / search  s sort:name  tab group  ? help  ⏎ detail  q quit
