crates/tome/tests/snapshots/browse_snapshots__snapshot_theme_light_skill_list.snap
---
source: crates/tome/tests/browse_snapshots.rs
expression: out
---
SKILL                          SOURCE                   PATH
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
alpha-helpers  claude-plu ~/.tome/library/alpha-helper│Preview: alpha-helpers
beta-tools     local      ~/.tome/library/beta-tools  │source: claude-plugins
fixture-skill  claude-plu ~/.tome/library/fixture-skil│path: ~/.tome/library/alpha-helpers
foo-bar        local      ~/.tome/library/foo-bar     │
zeta-utility   local      ~/.tome/library/zeta-utility│alpha-helpers
                                                      │A test skill body.
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
 5 skills   j/k ↕  / search  s sort:name  tab group  ? help  ⏎ detail  q quit
